2007-08-24  Andreas Wolfgang  <andreas-w@users.sourceforge.net>

	* extras/itsave.m Fixed script to be compatible with Matlab V7.3

	Since Matlab does not support sizeof(...), it was replaced by a new
	function itsizeof(...). In addition logical expressions have been
	made Matlab compatible (only variables with identical dimensions
	are used in logical expressions). The patch was tested using
	Matlab V7.3 and Octave V2.9.9.

l2007-08-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.h: Fine tuning of random generators

	When generating a vector or matrix of random samples, it is more
	efficient to use "*=" and "+=" operators on the same allocated
	memory pool than create temporary copies of vectors and matrices.
	Moreover, for double and complex<double> types, "*=" operator can
	employ optimised BLAS implementation.

	* itpp/comm/channel.cpp, itpp/comm/channel.h: Fine tuning of
	AWGN_Channel operator() performance

	Instead of using randn() and randn_c() global functions,
	Normal_RNG and Complex_Normal_RNG generators are declared as class
	objects. This reduces the number of generator's constructor
	executions to minimum.

2007-08-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: Return non-zero exit status on make check
	failure

	If not all test programs pass, output a short status message with
	the number of tests failed and return non-zero exit status to
	make.

2007-08-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/installation.doc, doc/local/linking.doc: Documentation
	updated to reflect recent changes

	* win32/itpp_acml_tests/fastica_test.vcproj,
	win32/itpp_acml_tests/itfile_test.vcproj,
	win32/itpp_acml_tests/parser_test.vcproj,
	win32/itpp_mkl_tests/*.vcproj: Final problems fixed in the MSVC++
	project files for test programs

	The fastica_test, itfile_test and parser_test projects require
	additional preprocessor definitions of some test data files.