@@ -83,36 +83,44 @@ D.set_row(1, v); D =
 [[0 1 0 1]
  [1 1 0 1]
  [1 1 1 0]]
-D.set_col(2, u): D=
+D.set_col(2, u): D =
 [[0 1 0 1]
  [1 1 1 1]
  [1 1 0 0]]
-D.copy_row(1, 2); D =
-[[0 1 0 1]
- [1 1 0 0]
+D.set_rows(0, B.get_rows(1,2)); D =
+[[0 1 1 1]
+ [0 1 1 0]
  [1 1 0 0]]
+D.set_cols(2, B.get_cols(0,1)); D =
+[[0 1 1 1]
+ [0 1 0 1]
+ [1 1 0 1]]
+D.copy_row(1, 2); D =
+[[0 1 1 1]
+ [1 1 0 1]
+ [1 1 0 1]]
 D.copy_col(2, 3); D =
 [[0 1 1 1]
- [1 1 0 0]
- [1 1 0 0]]
+ [1 1 1 1]
+ [1 1 1 1]]
 D.swap_rows(0, 2); D =
-[[1 1 0 0]
- [1 1 0 0]
+[[1 1 1 1]
+ [1 1 1 1]
  [0 1 1 1]]
 D.swap_cols(0, 3); D =
-[[0 1 0 1]
- [0 1 0 1]
+[[1 1 1 1]
+ [1 1 1 1]
  [1 1 1 0]]
 D.set_submatrix(1,2,2,3, A(0,1,0,1); D =
-[[0 1 0 1]
- [0 1 0 0]
+[[1 1 1 1]
+ [1 1 0 0]
  [1 1 1 1]]
 D.set_submatrix(0,0, A(0,1,0,1); D =
-[[0 0 0 1]
+[[0 0 1 1]
  [1 1 0 0]
  [1 1 1 1]]
 D.set_submatrix(1,2,2,3, c); D =
-[[0 0 0 1]
+[[0 0 1 1]
  [1 1 1 1]
  [1 1 1 1]]
 
@@ -373,38 +381,46 @@ D.set_row(1, v); D =
 [[1 1 5 1]
  [8 4 6 4]
  [2 4 1 2]]
-D.set_col(2, u): D=
+D.set_col(2, u): D =
 [[1 1 8 1]
  [8 4 2 4]
  [2 4 7 2]]
-D.copy_row(1, 2); D =
-[[1 1 8 1]
- [2 4 7 2]
+D.set_rows(0, B.get_rows(1,2)); D =
+[[2 5 7 4]
+ [2 5 6 7]
  [2 4 7 2]]
+D.set_cols(2, B.get_cols(0,1)); D =
+[[2 5 4 1]
+ [2 5 2 5]
+ [2 4 2 5]]
+D.copy_row(1, 2); D =
+[[2 5 4 1]
+ [2 4 2 5]
+ [2 4 2 5]]
 D.copy_col(2, 3); D =
-[[1 1 1 1]
- [2 4 2 2]
- [2 4 2 2]]
+[[2 5 1 1]
+ [2 4 5 5]
+ [2 4 5 5]]
 D.swap_rows(0, 2); D =
-[[2 4 2 2]
- [2 4 2 2]
- [1 1 1 1]]
+[[2 4 5 5]
+ [2 4 5 5]
+ [2 5 1 1]]
 D.swap_cols(0, 3); D =
-[[2 4 2 2]
- [2 4 2 2]
- [1 1 1 1]]
+[[5 4 5 2]
+ [5 4 5 2]
+ [1 5 1 2]]
 D.set_submatrix(1,2,2,3, A(0,1,0,1); D =
-[[2 4 2 2]
- [2 4 1 2]
- [1 1 3 9]]
+[[5 4 5 2]
+ [5 4 1 2]
+ [1 5 3 9]]
 D.set_submatrix(0,0, A(0,1,0,1); D =
-[[1 2 2 2]
+[[1 2 5 2]
  [3 9 1 2]
- [1 1 3 9]]
+ [1 5 3 9]]
 D.set_submatrix(1,2,2,3, c); D =
-[[1 2 2 2]
+[[1 2 5 2]
  [3 9 1 1]
- [1 1 1 1]]
+ [1 5 1 1]]
 
 A.T() =
 [[1 3 2]
@@ -663,38 +679,46 @@ D.set_row(1, v); D =
 [[-0.6124 1.5505 -0.1326 1.5505]
  [-1.8382 -0.3517 -0.8910 -0.2597]
  [0.9243 -0.0744 1.5505 -1.2992]]
-D.set_col(2, u): D=
+D.set_col(2, u): D =
 [[-0.6124 1.5505 0.0648 1.5505]
  [-1.8382 -0.3517 -1.4290 -0.2597]
  [0.9243 -0.0744 1.1741 -1.2992]]
-D.copy_row(1, 2); D =
-[[-0.6124 1.5505 0.0648 1.5505]
- [0.9243 -0.0744 1.1741 -1.2992]
+D.set_rows(0, B.get_rows(1,2)); D =
+[[-1.3342 0.7938 -0.2003 0.1789]
+ [0.6073 -1.0607 0.1421 -0.4927]
  [0.9243 -0.0744 1.1741 -1.2992]]
+D.set_cols(2, B.get_cols(0,1)); D =
+[[-1.3342 0.7938 -0.8841 -0.7612]
+ [0.6073 -1.0607 -1.3342 0.7938]
+ [0.9243 -0.0744 0.6073 -1.0607]]
+D.copy_row(1, 2); D =
+[[-1.3342 0.7938 -0.8841 -0.7612]
+ [0.9243 -0.0744 0.6073 -1.0607]
+ [0.9243 -0.0744 0.6073 -1.0607]]
 D.copy_col(2, 3); D =
-[[-0.6124 1.5505 1.5505 1.5505]
- [0.9243 -0.0744 -1.2992 -1.2992]
- [0.9243 -0.0744 -1.2992 -1.2992]]
+[[-1.3342 0.7938 -0.7612 -0.7612]
+ [0.9243 -0.0744 -1.0607 -1.0607]
+ [0.9243 -0.0744 -1.0607 -1.0607]]
 D.swap_rows(0, 2); D =
-[[0.9243 -0.0744 -1.2992 -1.2992]
- [0.9243 -0.0744 -1.2992 -1.2992]
- [-0.6124 1.5505 1.5505 1.5505]]
+[[0.9243 -0.0744 -1.0607 -1.0607]
+ [0.9243 -0.0744 -1.0607 -1.0607]
+ [-1.3342 0.7938 -0.7612 -0.7612]]
 D.swap_cols(0, 3); D =
-[[-1.2992 -0.0744 -1.2992 0.9243]
- [-1.2992 -0.0744 -1.2992 0.9243]
- [1.5505 1.5505 1.5505 -0.6124]]
+[[-1.0607 -0.0744 -1.0607 0.9243]
+ [-1.0607 -0.0744 -1.0607 0.9243]
+ [-0.7612 0.7938 -0.7612 -1.3342]]
 D.set_submatrix(1,2,2,3, A(0,1,0,1); D =
-[[-1.2992 -0.0744 -1.2992 0.9243]
- [-1.2992 -0.0744 -0.6124 1.2957]
- [1.5505 1.5505 1.4815 -0.2982]]
+[[-1.0607 -0.0744 -1.0607 0.9243]
+ [-1.0607 -0.0744 -0.6124 1.2957]
+ [-0.7612 0.7938 1.4815 -0.2982]]
 D.set_submatrix(0,0, A(0,1,0,1); D =
-[[-0.6124 1.2957 -1.2992 0.9243]
+[[-0.6124 1.2957 -1.0607 0.9243]
  [1.4815 -0.2982 -0.6124 1.2957]
- [1.5505 1.5505 1.4815 -0.2982]]
+ [-0.7612 0.7938 1.4815 -0.2982]]
 D.set_submatrix(1,2,2,3, c); D =
-[[-0.6124 1.2957 -1.2992 0.9243]
+[[-0.6124 1.2957 -1.0607 0.9243]
  [1.4815 -0.2982 1.5505 1.5505]
- [1.5505 1.5505 1.5505 1.5505]]
+ [-0.7612 0.7938 1.5505 1.5505]]
 
 A.T() =
 [[-0.6124 1.4815 0.9243]
@@ -953,38 +977,46 @@ D.set_row(1, v); D =
 [[-0.1478-0.2132i -0.1724+0.6195i 0.2678-1.0849i -0.1724+0.6195i]
  [-0.1872+1.4632i 0.4134-0.0812i -0.1511+0.7644i -0.7372-0.9940i]
  [-0.2915+0.7803i -0.2941-0.7994i -0.1724+0.6195i -0.8699-0.7039i]]
-D.set_col(2, u): D=
+D.set_col(2, u): D =
 [[-0.1478-0.2132i -0.1724+0.6195i 0.1800+0.1486i -0.1724+0.6195i]
  [-0.1872+1.4632i 0.4134-0.0812i -0.1177-1.6486i -0.7372-0.9940i]
  [-0.2915+0.7803i -0.2941-0.7994i -0.3098+0.3228i -0.8699-0.7039i]]
-D.copy_row(1, 2); D =
-[[-0.1478-0.2132i -0.1724+0.6195i 0.1800+0.1486i -0.1724+0.6195i]
- [-0.2915+0.7803i -0.2941-0.7994i -0.3098+0.3228i -0.8699-0.7039i]
+D.set_rows(0, B.get_rows(1,2)); D =
+[[-0.5883+1.1873i -0.6854-0.4138i 0.0004-1.3585i -0.7774-0.5661i]
+ [0.8496-0.8574i -0.1766+1.2697i -0.0060-0.2397i -1.6359+0.7692i]
  [-0.2915+0.7803i -0.2941-0.7994i -0.3098+0.3228i -0.8699-0.7039i]]
+D.set_cols(2, B.get_cols(0,1)); D =
+[[-0.5883+1.1873i -0.6854-0.4138i 0.7048+0.0976i 0.0682-0.9952i]
+ [0.8496-0.8574i -0.1766+1.2697i -0.5883+1.1873i -0.6854-0.4138i]
+ [-0.2915+0.7803i -0.2941-0.7994i 0.8496-0.8574i -0.1766+1.2697i]]
+D.copy_row(1, 2); D =
+[[-0.5883+1.1873i -0.6854-0.4138i 0.7048+0.0976i 0.0682-0.9952i]
+ [-0.2915+0.7803i -0.2941-0.7994i 0.8496-0.8574i -0.1766+1.2697i]
+ [-0.2915+0.7803i -0.2941-0.7994i 0.8496-0.8574i -0.1766+1.2697i]]
 D.copy_col(2, 3); D =
-[[-0.1478-0.2132i -0.1724+0.6195i -0.1724+0.6195i -0.1724+0.6195i]
- [-0.2915+0.7803i -0.2941-0.7994i -0.8699-0.7039i -0.8699-0.7039i]
- [-0.2915+0.7803i -0.2941-0.7994i -0.8699-0.7039i -0.8699-0.7039i]]
+[[-0.5883+1.1873i -0.6854-0.4138i 0.0682-0.9952i 0.0682-0.9952i]
+ [-0.2915+0.7803i -0.2941-0.7994i -0.1766+1.2697i -0.1766+1.2697i]
+ [-0.2915+0.7803i -0.2941-0.7994i -0.1766+1.2697i -0.1766+1.2697i]]
 D.swap_rows(0, 2); D =
-[[-0.2915+0.7803i -0.2941-0.7994i -0.8699-0.7039i -0.8699-0.7039i]
- [-0.2915+0.7803i -0.2941-0.7994i -0.8699-0.7039i -0.8699-0.7039i]
- [-0.1478-0.2132i -0.1724+0.6195i -0.1724+0.6195i -0.1724+0.6195i]]
+[[-0.2915+0.7803i -0.2941-0.7994i -0.1766+1.2697i -0.1766+1.2697i]
+ [-0.2915+0.7803i -0.2941-0.7994i -0.1766+1.2697i -0.1766+1.2697i]
+ [-0.5883+1.1873i -0.6854-0.4138i 0.0682-0.9952i 0.0682-0.9952i]]
 D.swap_cols(0, 3); D =
-[[-0.8699-0.7039i -0.2941-0.7994i -0.8699-0.7039i -0.2915+0.7803i]
- [-0.8699-0.7039i -0.2941-0.7994i -0.8699-0.7039i -0.2915+0.7803i]
- [-0.1724+0.6195i -0.1724+0.6195i -0.1724+0.6195i -0.1478-0.2132i]]
+[[-0.1766+1.2697i -0.2941-0.7994i -0.1766+1.2697i -0.2915+0.7803i]
+ [-0.1766+1.2697i -0.2941-0.7994i -0.1766+1.2697i -0.2915+0.7803i]
+ [0.0682-0.9952i -0.6854-0.4138i 0.0682-0.9952i -0.5883+1.1873i]]
 D.set_submatrix(1,2,2,3, A(0,1,0,1); D =
-[[-0.8699-0.7039i -0.2941-0.7994i -0.8699-0.7039i -0.2915+0.7803i]
- [-0.8699-0.7039i -0.2941-0.7994i -0.1478-0.2132i -0.6752-0.0387i]
- [-0.1724+0.6195i -0.1724+0.6195i -0.1693-0.4322i -0.7615+1.6166i]]
+[[-0.1766+1.2697i -0.2941-0.7994i -0.1766+1.2697i -0.2915+0.7803i]
+ [-0.1766+1.2697i -0.2941-0.7994i -0.1478-0.2132i -0.6752-0.0387i]
+ [0.0682-0.9952i -0.6854-0.4138i -0.1693-0.4322i -0.7615+1.6166i]]
 D.set_submatrix(0,0, A(0,1,0,1); D =
-[[-0.1478-0.2132i -0.6752-0.0387i -0.8699-0.7039i -0.2915+0.7803i]
+[[-0.1478-0.2132i -0.6752-0.0387i -0.1766+1.2697i -0.2915+0.7803i]
  [-0.1693-0.4322i -0.7615+1.6166i -0.1478-0.2132i -0.6752-0.0387i]
- [-0.1724+0.6195i -0.1724+0.6195i -0.1693-0.4322i -0.7615+1.6166i]]
+ [0.0682-0.9952i -0.6854-0.4138i -0.1693-0.4322i -0.7615+1.6166i]]
 D.set_submatrix(1,2,2,3, c); D =
-[[-0.1478-0.2132i -0.6752-0.0387i -0.8699-0.7039i -0.2915+0.7803i]
+[[-0.1478-0.2132i -0.6752-0.0387i -0.1766+1.2697i -0.2915+0.7803i]
  [-0.1693-0.4322i -0.7615+1.6166i -0.1724+0.6195i -0.1724+0.6195i]
- [-0.1724+0.6195i -0.1724+0.6195i -0.1724+0.6195i -0.1724+0.6195i]]
+ [0.0682-0.9952i -0.6854-0.4138i -0.1724+0.6195i -0.1724+0.6195i]]
 
 A.T() =
 [[-0.1478-0.2132i -0.1693-0.4322i -0.2915+0.7803i]
